# structural_atlas

./: CMakeLists.txt  LICENSE  README.md
gtests/: CMakeLists.txt  test_geometry.c  test_math.c  test_projection.c
src/: main.c
